Implement main logic for RangeQueries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,15 @@ project(uebung_3)
 
 set(CMAKE_CXX_STANDARD 14)
 
+add_link_options(-lgtest -lgtest_main)
+
 include_directories(Performance)
 include_directories(RangeQuery)
-include_directories(UnitTest)
-include_directories(UnitTest2)
+include_directories(Google_tests)
+
 
 add_executable(uebung_3
         Performance/main.cpp
         RangeQuery/RangeTree.hpp
         RangeQuery/Stopwatch.h
-        UnitTest/pch.cpp
-        UnitTest/pch.h
-        UnitTest/UnitTest.cpp
-        UnitTest2/UnitTest.cpp RangeQuery/Point.h)
+        Google_tests/UnitTest.cpp RangeQuery/Point.h RangeQuery/RangeQuery.h)
